# Nacho

./: .gitignore  CMakeLists.txt  README.md  chip8.cpp  chip8.h  nacho.cpp
lib/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
nacho/nacho/: chip8.cpp  chip8.h  nacho.cpp
src/: nacho.cpp
src/core/: chip8.cpp  chip8.h
src/opengl/: screen.h  shader.h  window.cpp  window.h
src/opengl/shaders/: screen.frag  screen.vert
src/screens/: chip8_screen.cpp  chip8_screen.h  debug_screen.cpp  debug_screen.h
